@@ -1,9 +1,16 @@
 API ChangeLog	(see the ChangeLog in each 'apps' directory for
 		app specific changes
 
+
+29-Oct-2002	Troy A. Griffitts <scribe@crosswire.org>
+	Added SWModule *SWMgr::getModule(const char *modName);
+	Added Terry Biggs' patch to htmlref filters to
+		more consistently deal with strongs numbers
+
 23-Oct-2002	Daniel Glassey <dglassey@crosswire.org>
-	some base work for installmgr on classes to 
+	Some base work for installmgr on classes to 
 		manage mods.d
+
 
 * Release 1.5.5 *
 
@@ -477,7 +484,7 @@ Kolatzek.
 	gbfhtml.cpp: Changed the HTML tag for new paragraph from <P> to <BR>
 		because it's bad HTML without a closing </P> tag.
 
-23-Oct-2000		Joachim Ansorg <jansorg@crosswire.org> 
+23-Oct-2000	Joachim Ansorg <jansorg@crosswire.org> 
 	Changed the private section of versekey.h into a protected one
 	because we need the change for current BibleTime!
 
@@ -757,4 +764,4 @@ Kolatzek.
 	Added chapmax and versemax information (canon.h)
 	Made sword.cpp test program accept parameters:
 		usage: sword ["Book CH:VS"] [number of verses to display]
-	enabled normalize function (try sword "Matthew 1:-7" 12)
+	Enabled normalize function (try sword "Matthew 1:-7" 12)
